shared/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-app-ingress
  namespace: app-space
spec:
  ingressClassName: "nginx"
  rules:
    - host: "https://swwao.courses.orbit.au.dk/grp-9"
      http:
        paths:
          - pathType: Prefix
            path: "/myapp"
            backend:
              service:
                name: node-app-service
                port:
                  number: 80
